First functionnal version
+ Initialization of the game with players
+ Roles assignment
+ Words proposal to the mayor and response handling
+ Game timer, one variable, then one of 1 minute

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "flodavid",
   "license": "ISC",
   "dependencies": {
-    "discord.io": "github:izy521/discord.io"
+    "discord.io": "github:izy521/discord.io",
+    "random-words": "^1.1.0"
   }
 }
